# Reinforcement-Learning-course

./: .gitignore  Guia_apresentacao.md  README.md  Temas_dos_Trabalhos.md  grading.md  pyproject.toml
Code/Lapan/Chapter02/: 01_agent_anatomy.py  02_cartpole_random.py  03_random_action_wrapper.py  04_cartpole_random_monitor.py
Code/Lapan/Chapter03/: 03_atari_gan.py  04_atari_gan_ignite.py
Code/Lapan/Chapter04/: 01_cartpole.py  02_frozenlake_naive.ipynb  02_frozenlake_naive.py  03_frozenlake_tweaked.py  04_frozenlake_nonslippery.py
Code/Lapan/Chapter05/: 01_frozenlake_v_iteration.py  02_frozenlake_q_iteration.py
Code/Lapan/Chapter06/: 01_frozenlake_q_learning.py
Code/Lapan/Chapter07/: 03_exp_sources.py  04_replay_buf.py  06_cartpole.py
Code/Lapan/Chapter12/: 01_cartpole_pg.py  02_pong_a2c.py  03_pong_a2c_rollouts.py  04_pong_r2.py
Code/Multi-agent/: Langchain.py  LeelaChess.py  Pistonball.py  tictactoe.py
Code/Sutton_Barto/chapter08/: maze.ipynb  (+2 more)
Code/textworld/: =5.9.0
Exercises/: BlackJack_QL.ipynb  Blackjack_QL.ipynb  Cliff_Walking_render.ipynb  Frozenlake_VI.ipynb  Frozenlake_q_learning.ipynb
Lectures/: Appendix - Cross-entropy.ipynb  Appendix 2 - Monte carlo tree search.ipynb  Example - AlphaGo Zero.ipynb  Example - AlphaGo.ipynb  Example - AlphaZero.ipynb  Example - The reinforce algorithm.ipynb  Example: The reinforce algorithm.ipynb  Lecture 1 - Introduction to RL.ipynb  Lecture 2 - Finite MDPs.ipynb  Lecture 3 - Q-learning and SARSA.ipynb  Lecture 4 - Temporal Difference Methods.ipynb  Lecture 5 - Approximate Solution Methods.ipynb  Lecture 6 - Multi-agent RL.ipynb  MN_Lecture 1 - Introduction to RL.py  chapter7.tex  vector_envs_tutorial.ipynb  vector_envs_tutorial.py
Lectures/.ipynb_checkpoints/: Appendix - Cross-entropy-checkpoint.ipynb
Projects/2024/: 0-Descrição do Projeto.md  1-Definição do Problema.md  2-Agentes.md  3-Ambiente.md  4-Fluxo.md  Avaliação.md  README.md
Projects/2025/: 0-Descrição.md  1 - Projeto 1.md
Projects/2025/Projeto Final/: README.md  main.py  pyproject.toml  replay.py
Projects/2025/Projeto Final/models/MATD3/: training_scores_history.npy
(+98 files in other folders)
