[tool.poetry]
name = "rl Course"
version = "0.1.0"
description = "Reinforcement Learning course"
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain = ">=0.0.163"
openai = ">=0.27.6"
#modin = "^0.22.0"
torch = ">=2.0.0, !=2.0.1"
tensorboard = ">=2.13.0"
tensorboardx = ">=2.6"
opencv-python = ">=4.7.0.72"
pybullet = ">=3.2.5"
ignite = ">=1.1.0"
pytorch-ignite = ">=0.4.12"
ale-py = ">=0.8.1"
atari-py = ">=0.2.9"
nltk = ">=3.8.0"
pandas = ">=2.0.3"
jupyter = ">=1.0.0"
matplotlib = ">=3.7.1"
tqdm = ">=4.62.3"
seaborn = ">=0.12.2"
scipy = ">=1.10.1"
pygame = ">=2.3.0"
pip = ">=23.2.1"
#textworld = {extras = ["vis"], version = "^1.5.4"}
mctspy = "^0.1.1"
#pettingzoo = {extras=["classic","butterfly"], version = "^1.24.1"}
rlcard = ">=1.0.5"
tenacity = ">=8.2.3"
ray = ">=2.7.0"
#pyarrow = "^13.0.0"
dm-tree = "^0.1.8"
lz4 = ">=4.3.2"
blis = ">=1.3.0"
pyarrow = "^21.0.0"
gymnasium = {extras = ["all"], version = "^1.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
