[project]
name = "Projeto_final"
version = "0.1.0"
description = "Projeto Final de Aprendizagem por reforço, FGV-EMAp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agilerl>=2.3.5",
    "gymnasium>=1.2.1",
    "imageio>=2.37.0",
    "matplotlib>=3.9.4",
    "mpe2>=0.0.1",
    "pettingzoo[mpe]>=1.25.0",
    "pillow>=12.0.0",
]
